# SR-DeepSVDD

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
adfa/: README_ADFA-LD.md
adfa/src/: code_runner_adfa_.py  code_runner_adfa_v6.py  run_sr_deepsvdd_ADFA_v6.py
adfa/src/baselines/: ocsvm.py  svdd_rbf.py
adfa/src/datasets/: adfa_dataset.py
adfa/src/models/: deep_svdd.py  sr_deep_svdd(1).py  sr_deep_svdd.py  svdd_linear.py
adfa/src/networks/: main.py
adfa/src/optim/: deepSVDD_trainer(1)(1).py  deepSVDD_trainer.py  sr_deep_svdd_trainer.py  svdd_linear_trainer.py
adfa/src/utils/: dataset_inspection_AFDA.py  metrics.py  score_plots.py  thresholds.py
src/: code_runner.py  run_sr_deepsvdd.py
src/base/: base_dataset.py
src/baselines/: ocsvm.py  svdd_rbf.py
src/models/: deep_svdd.py  sr_deep_svdd.py  svdd_linear.py
src/networks/: main.py
src/optim/: sr_deep_svdd_trainer.py
src/utils/: dataset_banana.py  score_plots 2.py  score_plots.py
tests/: test_imports.py
