
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sr-deepsvdd"
version = "0.1.0"
description = "Severity-Regularized Deep SVDD research code (simulated + ADFA-LD)"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Taha Alhindi"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "torch>=2.2; platform_system != 'Darwin' or platform_machine != 'arm64'",
    "torchvision>=0.17; platform_system != 'Darwin' or platform_machine != 'arm64'",
]

[project.urls]
Homepage = "https://github.com/your-org/sr-deepsvdd"
Issues   = "https://github.com/your-org/sr-deepsvdd/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
ignore = ["E203", "E266", "E501"]
fix = true

[tool.isort]
profile = "black"
multiline_output = 3
